# MCP-OpenLLM

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/llm/: llm_.py  prompts.py
src/mcp_classes/: mcp_client.py
test/: test_langchain_adapters.py  test_llm_load.py  test_mcp_connection.py
