[project]
name = "mcp-local-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.3",
    "langgraph>=0.3.22",
    "mcp>=1.6.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]
